fix text size on mobile view

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -2796,6 +2796,11 @@ input:checked + .toggle-bg {
   padding-bottom: 20vw;
 }
 
+.py-\[25vw\] {
+  padding-top: 25vw;
+  padding-bottom: 25vw;
+}
+
 .pb-\[20\%\] {
   padding-bottom: 20%;
 }
@@ -3830,6 +3835,11 @@ body{
 
   .md\:flex {
     display: flex;
+  }
+
+  .md\:h-fit {
+    height: -moz-fit-content;
+    height: fit-content;
   }
 
   .md\:w-\[1\.4vw\] {
